--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
 	}
 	compile 'org.apache.tinkerpop:tinkergraph-gremlin:3.3.2'
 
+	testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
+	testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+	testCompile "org.mockito:mockito-core:2.+"
+	testCompile('org.mockito:mockito-junit-jupiter:2.18.3')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 }
